Second_Step/data/extract_data_vpl/43/231/grade_comments.txt
-The compilation or preparation of execution has failed
IntegerProfile.java:32: error: cannot find symbol
        Arrays.sort(this.profile);
        ^
  symbol:   variable Arrays
  location: class IntegerProfile
IntegerProfile.java:36: error: incompatible types
            return "OK";
                   ^
  required: int
  found:    String
2 errors
Not compiled
